# src/main/java/br/com/pegasus/api/rest/commerce/domain/port/AuthPort.java
@@ -1,0 +1,7 @@
+package br.com.pegasus.api.rest.commerce.domain.port;
+
+public interface AuthPort {
+
+
+  String createToken(String username);
+}
